--- a/ContactsApp/ContactsApp/App.xaml
+++ b/ContactsApp/ContactsApp/App.xaml
@@ -3,6 +3,101 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ContactsApp.App">
     <Application.Resources>
+        <ResourceDictionary>
+            
+            <!-- Colors -->
+            <Color x:Key="FabBackgroundColor">#ffffff</Color>
+            <Color x:Key="AccentColor">#5AC8FA</Color>
+            <Color x:Key="FrameBackgroundColor">#FFFFFF</Color>
+            <Color x:Key="FrameBorderColor">Default</Color>
 
+            <Color x:Key="SystemGray">#AEAEB2</Color>
+
+            <!-- Icons -->
+            <x:String x:Key="IconAdd">&#xf415;</x:String>
+            <x:String x:Key="IconSettings">&#xf493;</x:String>
+
+            <x:String x:Key="IconSave">&#xf193;</x:String>
+            <x:String x:Key="IconEdit">&#xfda5;</x:String>
+            <x:String x:Key="IconDelete">&#xf1c0;</x:String>
+            <x:String x:Key="IconRefresh">&#xf450;</x:String>
+            <x:String x:Key="IconDirections">&#xf1d0;</x:String>
+            <x:String x:Key="IconPhone">&#xf3f2;</x:String>
+            <x:String x:Key="IconEmail">&#xf1ee;</x:String>
+
+            <x:String x:Key="IconPerson">&#xf004;</x:String>
+            <x:String x:Key="IconEmployment">&#xf990;</x:String>
+            <x:String x:Key="IconAddress">&#xf34d;</x:String>
+            
+            <!-- Label Styles -->
+            <Style x:Key="BaseLabelStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="{DynamicResource SystemGray}" />
+            </Style>
+
+            <Style
+                x:Key="LargeLabelStyle"
+                BasedOn="{StaticResource BaseLabelStyle}"
+                TargetType="Label">
+                <Setter Property="FontSize" Value="Large" />
+            </Style>
+
+            <Style
+                x:Key="MediumLabelStyle"
+                BasedOn="{StaticResource BaseLabelStyle}"
+                TargetType="Label">
+                <Setter Property="FontSize" Value="Medium" />
+            </Style>
+
+            <Style
+                x:Key="SmallLabelStyle"
+                BasedOn="{StaticResource BaseLabelStyle}"
+                TargetType="Label">
+                <Setter Property="FontSize" Value="Small" />
+            </Style>
+
+            <Style
+                x:Key="MicroLabelStyle"
+                BasedOn="{StaticResource BaseLabelStyle}"
+                TargetType="Label">
+                <Setter Property="FontSize" Value="Micro" />
+            </Style>
+            
+            <!-- Styles -->
+            <Style x:Key="EntryStyle" TargetType="Entry">
+                <Setter Property="Visual" Value="Material" />
+                <Setter Property="BackgroundColor" Value="White" />
+                <Setter Property="TextColor" Value="{DynamicResource SystemGray}" />
+                <Setter Property="PlaceholderColor" Value="{DynamicResource AccentColor}"/>
+            </Style>
+            
+            
+
+            <Style TargetType="ListView">
+                <Setter Property="HasUnevenRows" Value="True"/>
+                <Setter Property="Margin" Value="10"/>
+            </Style>
+            
+            <Style TargetType="ContentPage">
+                <Setter Property="BackgroundColor" Value="White"/>
+            </Style>
+
+            <OnPlatform x:Key="MaterialFontFamily" x:TypeArguments="x:String">
+                <On Platform="Android" Value="materialdesignicons-webfont.ttf#Material Design Icons" />
+                <On Platform="iOS" Value="Material Design Icons" />
+            </OnPlatform>
+            
+            <Style x:Key="FrameStyle" TargetType="Frame">
+                <Setter Property="BackgroundColor" Value="DarkRed" />
+                <Setter Property="BorderColor" Value="DarkGoldenrod" />
+                <Setter Property="Visual" Value="Material" />
+                <Setter Property="HasShadow" Value="True" />
+            </Style>
+
+            <Style x:Key="FloatingActionButtonStyle" TargetType="ImageButton">
+                <Setter Property="BackgroundColor" Value="{DynamicResource FabBackgroundColor}" />
+                <Setter Property="Visual" Value="Material" />
+            </Style>
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
